--- a/MVC/CIplatform/pom.xml
+++ b/MVC/CIplatform/pom.xml
@@ -82,7 +82,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-
+		
+		<dependency>
+		  <groupId>com.fasterxml.jackson.datatype</groupId>
+		  <artifactId>jackson-datatype-jsr310</artifactId>
+		  <version>2.13.4</version>
+		</dependency>
 		
 	</dependencies>
 	
