--- a/MVC/CIplatform/src/main/webapp/WEB-INF/web.xml
+++ b/MVC/CIplatform/src/main/webapp/WEB-INF/web.xml
@@ -16,4 +16,12 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
+    <error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/pages/NoPageFound.jsp</location>
+	</error-page>
+    <error-page>
+		<error-code>405</error-code>
+		<location>/WEB-INF/pages/NoPageFound.jsp</location>
+	</error-page>
 </web-app>
